--- a/admin (11).html
+++ b/admin (11).html
@@ -4701,7 +4701,7 @@ function reloadProductManagementWithActiveTab(productId, activeColor = null) {
 document.getElementById('newTokenRepo').readOnly = true;
 document.getElementById('newTokenRepo').style.backgroundColor = '#f5f5f5';
 
-document.getElementById('newTokenUsername').value = 'Dz-Store';
+document.getElementById('newTokenUsername').value = 'dz-one1';
 document.getElementById('newTokenUsername').readOnly = true;
 document.getElementById('newTokenUsername').style.backgroundColor = '#f5f5f5';
 
