--- a/admin.html
+++ b/admin.html
@@ -1265,12 +1265,12 @@
 
       /* أنماط جديدة لتوجيه الحقول لليسار */
 .social-media-inputs {
-    text-align: left !important;
+    text-align: right !important;
     direction: ltr !important;
 }
 
 .available-sizes-input {
-    text-align: left !important;
+    text-align: right !important;
     direction: ltr !important;
 }
 
@@ -1283,7 +1283,7 @@
 .social-media-inputs::placeholder,
 .available-sizes-input::placeholder,
 .available-colors-input::placeholder {
-    text-align: left;
+    text-align: right;
     direction: ltr;
 }
 
@@ -1291,7 +1291,7 @@
 .social-media-inputs:not(:placeholder-shown),
 .available-sizes-input:not(:placeholder-shown),
 .available-colors-input:not(:placeholder-shown) {
-    text-align: left;
+    text-align: right;
     direction: ltr;
 }
 
