--- a/admin.html
+++ b/admin.html
@@ -1177,6 +1177,37 @@
         .google-sheets-link:hover i {
             color: white;
         }
+        /* أنماط جديدة لتوجيه الحقول لليسار */
+.social-media-inputs {
+    text-align: left !important;
+    direction: ltr !important;
+}
+
+.available-sizes-input {
+    text-align: left !important;
+    direction: ltr !important;
+}
+
+.available-colors-input {
+    text-align: left !important;
+    direction: ltr !important;
+}
+
+/* التأكد من أن النص داخل الحقول يبدأ من اليسار */
+.social-media-inputs::placeholder,
+.available-sizes-input::placeholder,
+.available-colors-input::placeholder {
+    text-align: left;
+    direction: ltr;
+}
+
+/* التأكد من أن النص المدخل يبدأ من اليسار */
+.social-media-inputs:not(:placeholder-shown),
+.available-sizes-input:not(:placeholder-shown),
+.available-colors-input:not(:placeholder-shown) {
+    text-align: left;
+    direction: ltr;
+}
         
         @media (max-width: 768px) {
             .tabs {
