--- a/admin.html
+++ b/admin.html
@@ -1789,29 +1789,32 @@
                 </button>
             </div>
 
-            <div class="section">
-                <h3><i class="fas fa-ruler"></i> القياسات المتاحة</h3>
-                <div class="form-group">
-                    <label>القياسات المتاحة (مفصولة بفاصلة):</label>
-                    <input type="text" id="availableSizes" placeholder="S, M, L, XL, XXL, A">
-                    <small style="color: var(--text-light);">افصل بين القياسات بفاصلة (A = مقاس البالغين)</small>
-                </div>
-                <button class="btn btn-primary" onclick="saveAvailableSizes()">
-                    <i class="fas fa-save"></i> حفظ
-                </button>
-            </div>
+            
 
             <div class="section">
-                <h3><i class="fas fa-palette"></i> الألوان المتاحة</h3>
-                <div class="form-group">
-                    <label>الألوان المتاحة (مفصولة بفاصلة):</label>
-                    <input type="text" id="availableColors" placeholder="أبيض, أسود, أحمر, أزرق">
-                    <small style="color: var(--text-light);">افصل بين الألوان بفاصلة</small>
-                </div>
-                <button class="btn btn-primary" onclick="saveAvailableColors()">
-                    <i class="fas fa-save"></i> حفظ
-                </button>
-            </div>
+    <h3><i class="fas fa-ruler"></i> القياسات المتاحة</h3>
+    <div class="form-group">
+        <label>القياسات المتاحة (مفصولة بفاصلة):</label>
+        <input type="text" id="availableSizes" placeholder="S, M, L, XL, XXL, A" class="available-sizes-input">
+        <small style="color: var(--text-light);">افصل بين القياسات بفاصلة (A = مقاس البالغين)</small>
+    </div>
+    <button class="btn btn-primary" onclick="saveAvailableSizes()">
+        <i class="fas fa-save"></i> حفظ
+    </button>
+</div>
+
+            
+
+        <div class="section">
+    <h3><i class="fas fa-palette"></i> الألوان المتاحة</h3>
+    <div class="form-group">
+        <label>الألوان المتاحة (مفصولة بفاصلة):</label>
+        <input type="text" id="availableColors" placeholder="أبيض, أسود, أحمر, أزرق" class="available-colors-input">
+        <small style="color: var(--text-light);">افصل بين الألوان بفاصلة</small>
+    </div>
+    <button class="btn btn-primary" onclick="saveAvailableColors()">
+        <i class="fas fa-save"></i> حفظ
+    </button>
         </div>
 
         <!-- قسم إدارة التوكنات -->
