--- a/admin.html
+++ b/admin.html
@@ -1805,16 +1805,17 @@
 
             
 
-        <div class="section">
-    <h3><i class="fas fa-palette"></i> الألوان المتاحة</h3>
-    <div class="form-group">
-        <label>الألوان المتاحة (مفصولة بفاصلة):</label>
-        <input type="text" id="availableColors" placeholder="أبيض, أسود, أحمر, أزرق" class="available-colors-input">
-        <small style="color: var(--text-light);">افصل بين الألوان بفاصلة</small>
-    </div>
-    <button class="btn btn-primary" onclick="saveAvailableColors()">
-        <i class="fas fa-save"></i> حفظ
-    </button>
+      <div class="section">
+                <h3><i class="fas fa-palette"></i> الألوان المتاحة</h3>
+                <div class="form-group">
+                    <label>الألوان المتاحة (مفصولة بفاصلة):</label>
+                    <input type="text" id="availableColors" placeholder="أبيض, أسود, أحمر, أزرق">
+                    <small style="color: var(--text-light);">افصل بين الألوان بفاصلة</small>
+                </div>
+                <button class="btn btn-primary" onclick="saveAvailableColors()">
+                    <i class="fas fa-save"></i> حفظ
+                </button>
+            </div>
         </div>
 
         <!-- قسم إدارة التوكنات -->
