--- a/admin.html
+++ b/admin.html
@@ -1795,7 +1795,7 @@
     <h3><i class="fas fa-ruler"></i> القياسات المتاحة</h3>
     <div class="form-group">
         <label>القياسات المتاحة (مفصولة بفاصلة):</label>
-        <input type="text" id="availableSizes" placeholder="S, M, L, XL, XXL, A" class="available-sizes-input">
+       <input type="text" id="availableSizes" placeholder="S، M، L، XL، XXL،" class="available-sizes-input">
         <small style="color: var(--text-light);">افصل بين القياسات بفاصلة (A = مقاس البالغين)</small>
     </div>
     <button class="btn btn-primary" onclick="saveAvailableSizes()">
@@ -1809,7 +1809,7 @@
                 <h3><i class="fas fa-palette"></i> الألوان المتاحة</h3>
                 <div class="form-group">
                     <label>الألوان المتاحة (مفصولة بفاصلة):</label>
-                    <input type="text" id="availableColors" placeholder="أبيض, أسود, أحمر, أزرق">
+                  <input type="text" id="availableColors" placeholder="أبيض، أسود، أحمر، أزرق" class="available-colors-input">
                     <small style="color: var(--text-light);">افصل بين الألوان بفاصلة</small>
                 </div>
                 <button class="btn btn-primary" onclick="saveAvailableColors()">
