--- a/admin.html
+++ b/admin.html
@@ -1795,7 +1795,7 @@
     <h3><i class="fas fa-ruler"></i> القياسات المتاحة</h3>
     <div class="form-group">
         <label>القياسات المتاحة (مفصولة بفاصلة):</label>
-       <input type="text" id="availableSizes" placeholder="S، M، L، XL، XXL،" class="available-sizes-input">
+       <input type="text" id="availableSizes" placeholder="S, M, L, XL, XXL">
         <small style="color: var(--text-light);">افصل بين القياسات بفاصلة (A = مقاس البالغين)</small>
     </div>
     <button class="btn btn-primary" onclick="saveAvailableSizes()">
@@ -1805,11 +1805,11 @@
 
             
 
-      <div class="section">
+<div class="section">
                 <h3><i class="fas fa-palette"></i> الألوان المتاحة</h3>
                 <div class="form-group">
                     <label>الألوان المتاحة (مفصولة بفاصلة):</label>
-                  <input type="text" id="availableColors" placeholder="أبيض، أسود، أحمر، أزرق" class="available-colors-input">
+                    <input type="text" id="availableColors" placeholder="أبيض، أسود، أحمر، أزرق">
                     <small style="color: var(--text-light);">افصل بين الألوان بفاصلة</small>
                 </div>
                 <button class="btn btn-primary" onclick="saveAvailableColors()">
@@ -1817,7 +1817,6 @@
                 </button>
             </div>
         </div>
-
         <!-- قسم إدارة التوكنات -->
         <div id="tokens" class="tab-content">
             <div class="section">
