--- a/admin.html
+++ b/admin.html
@@ -1999,8 +1999,8 @@
                     </div>
                     <div class="form-group">
                         <label>اسم المستخدم:</label>
-                        <input type="text" id="newTokenUsername" placeholder="اسم المستخدم على GitHub" value="dz-one" readonly>
-                        <small style="color: var(--text-light);">اسم المستخدم الافتراضي: dz-one</small>
+                        <input type="text" id="newTokenUsername" placeholder="اسم المستخدم على GitHub" value="dz-one1" readonly>
+                        <small style="color: var(--text-light);">اسم المستخدم الافتراضي: dz-one1</small>
                     </div>
                     <div class="form-group">
                         <label>الفرع:</label>
